# http_clientlib

./: LICENSE  README.md  pyproject.toml  thoughts.md
docs/: readme.md
examples/simple_client_server/: client.py  server.py
examples/user_service/: client.py  server.py
fastclient/: api.py  configuration.py  helpers.py  http.py  loggers.py  types.py
http_clientlib/: __init__.py  api.py  configuration.py  http.py  types.py
