[project]
name = "http_clientlib"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[tool.setuptools.packages.find]
# Exclude directories matching the pattern 'tests*'
exclude = ["examples*", "tests*"]
