[project]
name = "http_clientlib"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
]

[tool.setuptools.packages.find]
# Exclude directories matching the pattern 'tests*'
exclude = ["examples*", "tests*"]
